--- a/Graphs/index.html
+++ b/Graphs/index.html
@@ -20,31 +20,51 @@
       src="https://unpkg.com/vis-network/standalone/umd/vis-network.min.js"
     ></script>
     <link rel="stylesheet" href="style.css" />
-    <script src="graph.js"></script>
+    <script src="script.js"></script>
   </head>
 
   <body>
     <nav
-      class="navbar navbar-light "
-      style="font-size: 25px; font-family: sans-serif; background-color: whitesmoke;"
+      class="navbar navbar-light"
+      style="
+        font-size: 25px;
+        font-family: sans-serif;
+        background-color: whitesmoke;
+      "
     >
-      <img
-        src="https://codingblocks.com/assets/images/cb/cblogo.png"
-        width="124"
-        height="45"
-        class="d-inline-block align-top"
-        alt=""
-      />
       Least time travel path project
     </nav>
-
-    <div id="container"></div>
+    <div id="container">
+      <div id="mynetwork"></div>
+      <div id="container2">
+        <span
+          id="temptext2"
+          style="width: 100%; text-align: center; font-size: x-large;"
+        >
+        </span>
+        <span
+          id="temptext"
+          style="width: 100%; text-align: center; font-size: x-large;"
+        >
+          Red link represents bus travel time :
+          <i class="fa fa-bus" aria-hidden="true" style="color: orange;"></i
+          ><br />
+          Green link represents flight travel time :
+          <i class="fa fa-plane" aria-hidden="true" style="color: green;"></i
+          ><br />
+          Click on solve to get Solution !!
+        </span>
+        <div id="mynetwork2" style="display: none;"></div>
+      </div>
+    </div>
 
     <div>
       <br />
       <button type="button" class="btn btn-danger" id="generate-graph">
         Get New Problem
       </button>
+      <br />
+      <button type="button" class="btn btn-success" id="solve">Solve</button>
     </div>
   </body>
 </html>
